style: fix mobile services layout bugs

--- a/_sass/_services.scss
+++ b/_sass/_services.scss
@@ -109,7 +109,7 @@
   position: relative;
 
   flex: 1;                   /* equal segments */
-  text-align: center;
+  text-align: -webkit-center;
   padding: 12px 16px;
 }
 
@@ -216,7 +216,7 @@
 
 /* Give header a consistent height so prices can bottom-align */
 .serviceComparisons__table thead th.serviceComparisons__th{
-  // height: clamp(120px, 18vw, 200px);
+  height: 190px;
   vertical-align: top;
   padding-bottom: 20px;
 }
